updated cv and resume

--- a/letter.tex
+++ b/letter.tex
@@ -42,22 +42,20 @@
 
 %-----       letter       ---------------------------------------------------------
 % recipient data
-\recipient{Company Recruitment team}{Company, Inc.\\123 somestreet\\some city}
-\date{January 01, 1984}
+\recipient{Appian Recruitment team}{Appian Corporation\\11955 Democracy Dr.\\ Reston, VA 20190}
+\date{September 20, 2014}
 \opening{Dear Sir or Madam,}
 \closing{Yours faithfully,}
-\enclosure[Attached]{curriculum vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
+%\enclosure[Attached]{curriculum vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
 \makelettertitle
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper neque sit amet lectus facilisis sed luctus nisl iaculis. Vivamus at neque arcu, sed tempor quam. Curabitur pharetra tincidunt tincidunt. Morbi volutpat feugiat mauris, quis tempor neque vehicula volutpat. Duis tristique justo vel massa fermentum accumsan. Mauris ante elit, feugiat vestibulum tempor eget, eleifend ac ipsum. Donec scelerisque lobortis ipsum eu vestibulum. Pellentesque vel massa at felis accumsan rhoncus.
+My name is Hongyi Xia and I am an Aerospace Engineering student at the University of Maryland, College Park graduating in May 2015. I am applying to the Associate Consultant position at Appian. In addition to engineering, I am involved in the Hinman CEOs Entrepreneurship program, where we use our technical skills to design products and services for the real world. Through Hinman, I worked as an Entrepreneurial Consultant for Science Applications International Corporation and developed a better understanding of the business aspect of investing in technologies. My responsibilities were to research and write a recommendation report on waste heat recovery systems for military engines which served as a guideline for SAIC’s investment in emerging technologies.
 
-Suspendisse commodo, massa eu congue tincidunt, elit mauris pellentesque orci, cursus tempor odio nisl euismod augue. Aliquam adipiscing nibh ut odio sodales et pulvinar tortor laoreet. Mauris a accumsan ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse vulputate sem vehicula ipsum varius nec tempus dui dapibus. Phasellus et est urna, ut auctor erat. Sed tincidunt odio id odio aliquam mattis. Donec sapien nulla, feugiat eget adipiscing sit amet, lacinia ut dolor. Phasellus tincidunt, leo a fringilla consectetur, felis diam aliquam urna, vitae aliquet lectus orci nec velit. Vivamus dapibus varius blandit.
+My previous work experience was mostly in research and heavily programming based. I have worked extensively in Matlab, for class projects, my honors research involving a computer vision algorithm to track vortex shedding, a project using Microsoft Kinect to visualize flow fields, modeling the dynamics of hexbug behavior and so on. In high school, I took 3 years of Java in which I received a 5 on the AP Computer Science AB exam and completed courses such as Computational Methods and Computer Graphics. My Java experience laid the foundation for me to quickly learn other languages such as Python, C++, OpenGL when required for a project despite the fact that computer programming is not a focus in our Aerospace curriculum. I am interested in learning more about Buisness Process Management software, especially from a user experience perspective.
 
-Duis sit amet magna ante, at sodales diam. Aenean consectetur porta risus et sagittis. Ut interdum, enim varius pellentesque tincidunt, magna libero sodales tortor, ut fermentum nunc metus a ante. Vivamus odio leo, tincidunt eu luctus ut, sollicitudin sit amet metus. Nunc sed orci lectus. Ut sodales magna sed velit volutpat sit amet pulvinar diam venenatis.
+From September 2013 to August 2014, I worked at Space Exploration Technologies in Hawthorne, California as a Propulsion Intern. I supported engine development for the Falcon 9 rocket and performed thermal and fluids analysis for the rocket. My quantitative skills will help me succeed as a consultant. Appian will allow me to expand my knowledge to the business field and apply the problem solving skills I have developed as an engineer.
 
-Albert Einstein discovered that $e=mc^2$ in 1905.
 
-\[ e=\lim_{n \to \infty} \left(1+\frac{1}{n}\right)^n \]
 
 \makeletterclosing
 
