--- a/cv_4.tex
+++ b/cv_4.tex
@@ -42,10 +42,9 @@
 {\bf University of Maryland, College Park} \hfill { Expected: May 2015} \\
 B.S. in Aerospace Engineering - Aerospace Engineering Honors Program \hfill {GPA: 3.75} \\
 Coursework: Aerodynamics, Dynamics, Controls, Vibrations, Heat Transfer, Propulsion, Aerospace Structures\\
-Hinman CEOs Entrepreneurship Program ~$\cdot$ University Honors Program \\
-Tau Beta Pi National Engineering Honor Society ~$\cdot$Sigma Gamma Tau National Aerospace Honor Society\\
-Math Success Program - Tutored students in undergraduate math courses. \\
-Teaching Fellow for ENES232 Thermodynamics. ~$\cdot$SEEDS Peer Mentoring Program \\
+Hinman CEOs Entrepreneurship Program ~$\cdot$ University Honors Program ~$\cdot$  Alpha Omega Epsilon Professional Engineering Sorority ~$\cdot$ Tau Beta Pi National Engineering Honor Society ~$\cdot$Sigma Gamma Tau National Aerospace Honor Society\\
+Math Success Program - Tutored students in undergraduate math courses. ~$\cdot$SEEDS Peer Mentoring Program \\
+Teaching Fellow for ENES232 Thermodynamics. \\
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -113,7 +112,7 @@ Teaching Fellow for ENES232 Thermodynamics. ~$\cdot$SEEDS Peer Mentoring Program
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Languages & Matlab, Java, Python, C++, OpenGL, git, \LaTeX \\
 Applications & ANSYS, Star-CCM+, Thermal Desktop, Autodesk Inventor, Siemens NX, Visual Studio \\
-Operating Systems & Linux, Mac OSX, Windows \\
+Operating Systems & Linux, Mac OS X, Windows \\
 \end{tabular} \\
 Mandarin Chinese (native speaker)
 \end{rSection}
@@ -124,7 +123,7 @@ Mandarin Chinese (native speaker)
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Awards}
-
+1st Place, JP Morgan Code for Good Challenge - Delaware \hfill{September 2014}\\
 Banneker Key Scholar - Full, four year scholarship to the University of Maryland.  \hfill { March 2010}   \\
 Siemens Competition in Math, Science \& Technology Semifinalist \hfill {October 2009} \\
 Maryland Distinguished Scholar Finalist (Academic Achievement) \hfill {October 2009}  \\
