updated and reorganized cv

--- a/letter.tex
+++ b/letter.tex
@@ -11,7 +11,7 @@
 %\usepackage{CJKutf8}                              % if you need to use CJK to typeset your resume in Chinese, Japanese or Korean
 
 % adjust the page margins
-\usepackage[scale=0.75]{geometry}
+\usepackage[scale=0.8]{geometry}
 %\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
 %\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 
@@ -42,18 +42,18 @@
 
 %-----       letter       ---------------------------------------------------------
 % recipient data
-\recipient{Appian Recruitment team}{Appian Corporation\\11955 Democracy Dr.\\ Reston, VA 20190}
-\date{September 20, 2014}
+\recipient{Lockheed Martin}
+\date{October 8, 2014}
 \opening{Dear Sir or Madam,}
 \closing{Yours faithfully,}
 %\enclosure[Attached]{curriculum vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
 \makelettertitle
 
-My name is Hongyi Xia and I am an Aerospace Engineering student at the University of Maryland, College Park graduating in May 2015. I am applying to the Associate Consultant position at Appian. In addition to engineering, I am involved in the Hinman CEOs Entrepreneurship program, where we use our technical skills to design products and services for the real world. Through Hinman, I worked as an Entrepreneurial Consultant for Science Applications International Corporation and developed a better understanding of the business aspect of investing in technologies. My responsibilities were to research and write a recommendation report on waste heat recovery systems for military engines which served as a guideline for SAIC’s investment in emerging technologies.
+My name is Hongyi Xia and I am an Aerospace Engineering student at the University of Maryland, College Park graduating in May 2015. I am looking for an entry level Aerospace Engineer position at Lockheed Martin.
 
-My previous work experience was mostly in research and heavily programming based. I have worked extensively in Matlab, for class projects, my honors research involving a computer vision algorithm to track vortex shedding, a project using Microsoft Kinect to visualize flow fields, modeling the dynamics of hexbug behavior and so on. In high school, I took 3 years of Java in which I received a 5 on the AP Computer Science AB exam and completed courses such as Computational Methods and Computer Graphics. My Java experience laid the foundation for me to quickly learn other languages such as Python, C++, OpenGL when required for a project despite the fact that computer programming is not a focus in our Aerospace curriculum. I am interested in learning more about Buisness Process Management software, especially from a user experience perspective.
+From September 2013 to August 2014, I interned at Space Exploration Technologies in Hawthorne, California as a Propulsion Intern. I supported engine development for the Falcon 9 rocket, developed 3D visualization software, and performed thermal and fluids analysis for the rocket.
 
-From September 2013 to August 2014, I worked at Space Exploration Technologies in Hawthorne, California as a Propulsion Intern. I supported engine development for the Falcon 9 rocket and performed thermal and fluids analysis for the rocket. My quantitative skills will help me succeed as a consultant. Appian will allow me to expand my knowledge to the business field and apply the problem solving skills I have developed as an engineer.
+My previous work experience was mostly in research and heavily programming based. I have worked extensively in Matlab, for class projects, my honors research involving a computer vision algorithm to track vortex shedding, a project using Microsoft Kinect to visualize flow fields, modeling the dynamics of hexbug behavior and so on. In high school, I took 3 years of Java in which I received a 5 on the AP Computer Science AB exam and completed courses such as Computational Methods and Computer Graphics. My Java experience laid the foundation for me to quickly learn other languages such as Python, C++, OpenGL when required for a project despite the fact that computer programming is not a focus in our Aerospace curriculum. The ability to quickly pick up new technologies is crucial to being a successful technology analyst due to constantly evolving nature of the technology field.
 
 
 
