--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@
 \makecvtitle
 
 \section{Education}
-\cventry{2010--2015 Expected}{B.S. Aerospace Engineering}{University of Maryland College Park}{College Park}{MD}{Aerospace Engineering Honors Program}  % arguments 3 to 6 can be left empty
+\cventry{2010--2015 Expected}{B.S. Aerospace Engineering}{University of Maryland College Park}{College Park}{MD}{Aerospace Engineering Honors Program \\ Aerodynamics, Dynamics, Controls, Vibrations, Thermodynamics, Heat Transfer, Propulsion, Aerospace Structures, Computational Fluid Dynamics, Computational Structural Mechanics, Aircraft Design}
 \cventry{2006--2010}{High School}{Montgomery Blair High School}{Silver Spring}{MD}{Science, Mathematics, and Computer Science Magnet Program}
 
 %\section{Master thesis}
@@ -89,35 +89,31 @@
 \cventry{June--August 2012}{Research Intern}{Miniature Robotics REU Program, University of Maryland}{College Park, MD}{}{Developed a method to visualize 3D flows using Microsoft Kinect as a sensor. Calibrated and programmed Microsoft Kinect cameras in OpenCV and Python to collect depth video data. Wrote Matlab scripts to image process depth video data of smoke rings and calculate their flow properties.}
 \cventry{June--August 2009}{Research Intern}{National Institutes of Health}{Bethesda, MD}{}{Research culminated in paper titled ``Determination of the Effect of Modifying G\textbeta5 Expression Levels on Drosophila Oxidative Stress Resistance.'' Placed semi-finals in Siemens Competition in Math, Science, and Technology.}
 
-
 \section{Teaching and Mentoring}
-\cventry{September 2012--May 2013}{Math Coach, Math Success Program}{University of Maryland}{College Park, MD}{}{Tutored students in undergraduate math courses.}
-\cventry{September 2011--May 2013}{Peer Mentor, SEEDS Peer Mentoring Program,}{University of Maryland, }{College Park, MD}{}{Mentored a group of 10 freshman engineering students to facilitate their adjustment to college and the engineering program each year.}
-\cventry{January--May 2012}{Teaching Fellow, ENES232 Thermodynamics}{University of Maryland}{College Park, MD}{}{Facilitated recitation for 60 students. Graded student quizzes. Held weekly office hours.}
+\cventry{Fall 2014}{Teaching Fellow, ENAE380 Flight Software Systems}{University of Maryland}{College Park, MD}{}{Assisted students during weekly lab sessions for course using C++.}
+\cventry{2012--2013}{Math Coach, Math Success Program}{University of Maryland}{College Park, MD}{}{Tutored students in undergraduate math courses.}
+\cventry{Spring 2012}{Teaching Fellow, ENES232 Thermodynamics}{University of Maryland}{College Park, MD}{}{Facilitated recitation for 60 students. Graded student quizzes. Held weekly office hours.}
+\cventry{Spring 2012}{Peer Assisted Learning Tutor}{University of Maryland}{College Park, MD}{}{Assisted instructor in a study skills class. Met with individual students to help with coursework and study skills.}
+\cventry{2011--2013}{Peer Mentor, SEEDS Peer Mentoring Program}{University of Maryland}{College Park, MD}{}{Mentored a group of 10 freshman engineering students to facilitate their adjustment to college and the engineering program each year.}
 
-
-\section{Languages}
-\cvitemwithcomment{Mandarin}{Fluent}{Native Speaker}
-\cvitemwithcomment{English}{Fluent}{Lived in the United States since age 6}
-
-\section{Computer skills}
+\section{Skills}
 \cvitem{Languages}{Matlab, Java, Python, C++, OpenGL, git, \LaTeX}
-\cvitem{Applications}{ANSYS, Star-CCM+, Thermal Desktop, Autodesk Inventor, Siemens NX, Visual Studio}
-\cvitem{Operating Systems}{Linux, Mac OS X, Windows}
+\cvitem{Applications}{Ansys, Star-CCM+, Thermal Desktop, Autodesk Inventor, Siemens NX, Visual Studio}
+\cvitem{}{Linux, Mac OS X, Windows}
+\cvitem{Fluency}{English, Mandarin Chinese}
 
 \section{Academic Honors}
-\cvlistitem{1st Place, JP Morgan Code for Good Challenge - Delaware 2014}
-\cvlistitem{Banneker Key Scholar - Full, four year scholarship to the University of Maryland (2010-2014)}
-\cvlistitem{Siemens Competition in Math, Science, and Technology Semifinalist 2009}
-\cvlistitem{Maryland Distinguished Scholar Finalist (Academic Achievement) 2009}
-\cvlistitem{National AP Scholar 2009}
+\cvitem{2014}{1st Place, JP Morgan Code for Good Challenge - Delaware}
+\cvitem{2010}{Banneker Key Scholar - Full, four year scholarship to the University of Maryland}
+\cvitem{2009}{Siemens Competition in Math, Science, and Technology Semifinalist}
+\cvitem{2009}{Maryland Distinguished Scholar Finalist (Academic Achievement)}
+\cvitem{2009}{National AP Scholar}
 
-\section{Affiliations}
-\cvlistitem{Hinman CEOs - A living and learning entrepreneurship program at the University of Maryland}
-\cvlistitem{AIAA - American Institute of Aeronautics and Astronautics}
-\cvlistitem{Tau Beta Pi - National Engineering Honor Society, inducted December 2011.}
-\cvlistitem{Sigma Gamma Tau - National Aerospace Engineering Honor Society, inducted December 2011.}
-\cvlistitem{Alpha Omega Epsilon - Professional Engineering Sorority}
+\section{Service and Leadership}
+\cvitem{2012}{\textbf{Hinman CEOs} - A living and learning entrepreneurship program at the University of Maryland}
+\cvitem{2011}{\textbf{Tau Beta Pi} - National Engineering Honor Society. Organized STEM outreach activities including university tours, Science Fairs, Science Bowls, Science Olympiads, and the annual Maryland Day.}
+\cvitem{2011}{\textbf{Sigma Gamma Tau} - National Aerospace Engineering Honor Society. Oversaw induction of new members.}
+\cvitem{2010}{\textbf{Alpha Omega Epsilon} - Professional Engineering Sorority}
 
 
 
