--- a/cv_4.tex
+++ b/cv_4.tex
@@ -41,7 +41,7 @@
 
 {\bf University of Maryland, College Park} \hfill { Expected: May 2015} \\
 B.S. in Aerospace Engineering - Aerospace Engineering Honors Program \hfill {GPA: 3.75} \\
-Coursework: Aerodynamics, Dynamics, Controls, Vibrations, Heat Transfer, Propulsion, Aerospace Structures\\
+Coursework: Aerodynamics, Dynamics, Controls, Vibrations, Thermodynamcis, Heat Transfer, Propulsion, Aerospace Structures\\
 Hinman CEOs Entrepreneurship Program ~$\cdot$ University Honors Program ~$\cdot$  Alpha Omega Epsilon Professional Engineering Sorority ~$\cdot$ Tau Beta Pi National Engineering Honor Society ~$\cdot$Sigma Gamma Tau National Aerospace Honor Society\\
 Math Success Program - Tutored students in undergraduate math courses. ~$\cdot$SEEDS Peer Mentoring Program \\
 Teaching Fellow for ENES232 Thermodynamics. \\
@@ -111,8 +111,8 @@ Teaching Fellow for ENES232 Thermodynamics. \\
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Languages & Matlab, Java, Python, C++, OpenGL, git, \LaTeX \\
-Applications & ANSYS, Star-CCM+, Thermal Desktop, Autodesk Inventor, Siemens NX, Visual Studio \\
-Operating Systems & Linux, Mac OS X, Windows \\
+Applications & Ansys, Star-CCM+, Thermal Desktop, Autodesk Inventor, Siemens NX, Visual Studio \\
+& Linux, Mac OS X, Windows \\
 \end{tabular} \\
 Mandarin Chinese (native speaker)
 \end{rSection}
@@ -127,7 +127,7 @@ Mandarin Chinese (native speaker)
 Banneker Key Scholar - Full, four year scholarship to the University of Maryland.  \hfill { March 2010}   \\
 Siemens Competition in Math, Science \& Technology Semifinalist \hfill {October 2009} \\
 Maryland Distinguished Scholar Finalist (Academic Achievement) \hfill {October 2009}  \\
-National AP Scholar \hfill { August 2009}  \\
+National AP Scholar \hfill {August 2009}  \\
 
 \end{rSection}
 %----------------------------------------------------------------------------------------
