--- a/hongyixia_cv.tex
+++ b/hongyixia_cv.tex
@@ -25,7 +25,7 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 % \lhead{Curriculum Vitae\\Stanford University - Department of Aeronautics and Astronautics}
-\lhead{Curriculum Vitae\\Department of Aerospace Engineering\\U-M ID: 29804372}
+% \lhead{Curriculum Vitae\\Department of Aerospace Engineering\\U-M ID: 29804372}
 % personal data
 \name{Hongyi}{Xia}
 %\title{Resumé title}                               % optional, remove / comment the line if not wanted
@@ -98,8 +98,7 @@
 
 \section{Skills}
 \cvitem{Languages}{Matlab, Java, Python, C++, OpenGL, git, \LaTeX}
-\cvitem{Applications}{Ansys, Star-CCM+, Thermal Desktop, Autodesk Inventor, Siemens NX, Visual Studio}
-\cvitem{}{Linux, Mac OS X, Windows}
+\cvitem{Applications}{Ansys, Star-CCM+, Thermal Desktop, Autodesk Inventor, Siemens NX, Visual Studio, Linux}
 \cvitem{Fluency}{English, Mandarin Chinese}
 
 \section{Academic Honors}
