--- a/hongyixia_resume.tex
+++ b/hongyixia_resume.tex
@@ -40,11 +40,11 @@
 \begin{rSection}{Education}
 
 {\bf University of Maryland, College Park} \hfill { Expected: May 2015} \\
-B.S. in Aerospace Engineering - Aerospace Engineering Honors Program \hfill {GPA: 3.75} \\
-Coursework: Aerodynamics, Dynamics, Controls, Vibrations, Thermodynamcis, Heat Transfer, Propulsion, Aerospace Structures\\
-Hinman CEOs Entrepreneurship Program ~$\cdot$ University Honors Program ~$\cdot$  Alpha Omega Epsilon Professional Engineering Sorority ~$\cdot$ Tau Beta Pi National Engineering Honor Society ~$\cdot$Sigma Gamma Tau National Aerospace Honor Society\\
-Math Success Program - Tutored students in undergraduate math courses. ~$\cdot$SEEDS Peer Mentoring Program \\
-Teaching Fellow for ENES232 Thermodynamics. \\
+B.S. in Aerospace Engineering - Aerospace Engineering Honors Program \hfill {GPA: 3.76} \\
+{\bf Coursework:} Aerodynamics, Dynamics, Controls, Vibrations, Thermodynamcis, Heat Transfer, Propulsion, Aerospace Structures\\
+{\bf Teaching:} Math Success Program - Tutored students in undergraduate math courses. ~$\cdot$SEEDS Peer Mentoring Program \\
+Teaching Fellow for ENES232 Thermodynamics (Spring 2012), ENAE380 Flight Software Systems (Fall 2014) \\
+{\bf Affliations:} Hinman CEOs Entrepreneurship Program ~$\cdot$ University Honors Program ~$\cdot$  Alpha Omega Epsilon Professional Engineering Sorority ~$\cdot$ Tau Beta Pi National Engineering Honor Society ~$\cdot$Sigma Gamma Tau National Aerospace Honor Society\\
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -111,8 +111,7 @@ Teaching Fellow for ENES232 Thermodynamics. \\
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Languages & Matlab, Java, Python, C++, OpenGL, git, \LaTeX \\
-Applications & Ansys, Star-CCM+, Thermal Desktop, Autodesk Inventor, Siemens NX, Visual Studio \\
-& Linux, Mac OS X, Windows \\
+Applications & Ansys, Star-CCM+, Thermal Desktop, Autodesk Inventor, Siemens NX, Visual Studio, Linux \\
 \end{tabular} \\
 Mandarin Chinese (native speaker)
 \end{rSection}
